--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.28.2",
     "@tailwindcss/vite": "^4.1.3",
+    "axios": "^1.10.0",
     "humanize-duration": "^3.32.1",
     "quill": "^2.0.3",
     "rc-progress": "^4.0.0",
@@ -19,6 +20,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
     "react-simple-star-rating": "^5.1.7",
+    "react-toastify": "^11.0.5",
     "react-youtube": "^10.1.0",
     "uniqid": "^5.4.0"
   },
