backend url updated

--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_ZGVmaW5pdGUtZ3JvdXNlLTk2LmNsZXJrLmFjY291bnRzLmRldiQ
 
 VITE_CURRENCY = '$'
-VITE_BACKEND_URL = 'http://localhost:5000'
+VITE_BACKEND_URL = 'https://lms-portal-backend-gamma.vercel.app'
